# FindThis

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: ft_generate_header.cmake
ft_bin/: CMakeLists.txt  main.cpp
ft_lib/: CMakeLists.txt
ft_lib/include/ft/: exit_status.hpp  parser.hpp  walker.hpp
ft_lib/src/: color.cpp  color.hpp  log.cpp  macros.hpp  match.cpp  parser.cpp  print.cpp  version.hpp.in  walker.cpp
src/: CMakeLists.txt  color.cpp  color.hpp  exit_status.hpp  log.hpp  logger.hpp  main.cpp  match.cpp  match.hpp  options.hpp  parser.cpp  parser.hpp  print.cpp  print.hpp  printer.cpp  printer.hpp  tree_walker.hpp  types.hpp  usage.hpp  version.hpp  version.hpp.in  walker.cpp  walker.hpp
